[package]
name = "clinews"
version = "0.1.0"
edition = "2018"

description = "A simple cli news reader app"
license = "MIT"
authors = ["creativcoder"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.20.0"
dotenv = "0.15.0"
newsapi = { path = "./newsapi", features = ["async"] }
termimad = "0.14.2"
tokio = {version = "1.11.0", features = ["full"] }
